init add configuration
Signed-off-by: Timo Brandstätter <timo@swirldslabs.com>